[gd_scene load_steps=7 format=3 uid="uid://bk2c50ncqbebg"]

[ext_resource type="Script" path="res://Scripts/take_photo.gd" id="1_xp245"]
[ext_resource type="FontFile" uid="uid://yphs355qgbfo" path="res://Assets/Fonts/Poppins/Poppins-Bold.ttf" id="2_0u4m8"]
[ext_resource type="Texture2D" uid="uid://cj7d5bkqop1ey" path="res://Assets/Images/2024-10-12-220632.jpg" id="3_x2jic"]
[ext_resource type="Theme" uid="uid://ccqsg2c5bhxyc" path="res://Resources/light_button.tres" id="4_3cdja"]
[ext_resource type="PackedScene" uid="uid://iiwey68kgwv5" path="res://Scenes/back_to_main_button.tscn" id="5_3tyio"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bge45"]
bg_color = Color(0.976471, 0.839216, 0.933333, 1)
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
anti_aliasing_size = 0.2

[node name="TakePhoto" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xp245")

[node name="PhotoTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0
one_shot = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -179.0
offset_right = 200.0
offset_bottom = 179.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_bottom = 90

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 50

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_0u4m8")
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[center]Lets take a [color=#d355b6]photo[/color]![/center]
"

[node name="Image" type="TextureRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3_x2jic")
expand_mode = 5
stretch_mode = 5

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 35)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bge45")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 140
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 140
theme_override_constants/margin_bottom = 6

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("4_3cdja")
theme_override_colors/font_hover_color = Color(0.976471, 0.839216, 0.933333, 1)
theme_override_fonts/font = ExtResource("2_0u4m8")
text = "Take picture"

[node name="TimeLeft" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0u4m8")
theme_override_font_sizes/font_size = 21
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 6
theme_override_constants/margin_bottom = 6

[node name="BackButton" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer3" instance=ExtResource("5_3tyio")]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 6

[node name="Next" type="Button" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("4_3cdja")
theme_override_colors/font_hover_color = Color(0.976471, 0.839216, 0.933333, 1)
theme_override_fonts/font = ExtResource("2_0u4m8")
text = "Next
"

[node name="HTTPRequest" type="HTTPRequest" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer2/Next"]
unique_name_in_owner = true

[connection signal="timeout" from="PhotoTimer" to="." method="_on_photo_timer_timeout"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/Button" to="." method="_on_button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/PanelContainer/MarginContainer2/Next" to="." method="_on_next_button_up"]
[connection signal="request_completed" from="MarginContainer/VBoxContainer/PanelContainer/MarginContainer2/Next/HTTPRequest" to="." method="_on_http_request_request_completed"]
